# envvars

./: Cargo.toml  README.md
.github/workflows/: lint.yml
assets/extractor/: Cargo.toml.hidden
assets/extractor/src/: main.rs
assets/extractor/src/keys/: marker.txt
scripts/: mod.rb  tasks.rb
scripts/env/: paths.rb
scripts/tools/: mod.rb  reporter.rb
src/: assets.rs  checksum.rs  decoder.rs  error.rs  extractor.rs  lib.rs
src/profiles/: mod.rs  unix.rs  windows.rs
